--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
     "bootstrap": "^5.3.1",
+    "firebase": "^10.7.2",
     "firebase-admin": "^12.0.0",
     "firebase-functions": "^4.6.0",
     "pdfmake": "^0.2.9",
